# gobbler

./: .ccls  CMakeLists.txt  README.md  shell.nix  test.cmake
example/: CMakeLists.txt  Makefile  main.cpp
include/gobbler/: ArgParser.hpp  Error.hpp
src/: ArgParser.cpp
test/: main.cpp
